--- a/styles.css
+++ b/styles.css
@@ -92,8 +92,8 @@ a:hover {
 }
 
 .project1 {
-  width: 20rem;
-  height: 20rem;
+  width: 200px;
+  height: 200px;
   margin-top: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
