--- a/styles.css
+++ b/styles.css
@@ -53,17 +53,18 @@ section#projects {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .description {
   margin-top: 0;
-  /* margin-top: 30px; */
+  margin-right: 3%;
   width: 700px;
 }
 
 .description2 {
   margin-top: 20px;
   margin-bottom: 30px;
-  width: 1020px;
+  width: 100%;
 }
 a {
   color: #0077cc;
@@ -90,27 +91,20 @@ a:hover {
   display: block;
   object-fit: cover;
 }
+
 .project1 {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-left: 20px;
-  margin-right: 70px;
-  margin-bottom: 20px;
+  width: 400px;
+  height: 350px;
+  border-radius: 5px;
+  margin-top: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 1%;
   float: left;
   display: block;
   object-fit: cover;
+  box-shadow: 8px 8px 8px rgba(10, 10, 10, 0.2);
 }
-/* .project1 {
-  width: 200px;
-  height: 200px;
-  margin-top: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  float: left;
-  display: block;
-  object-fit: cover;
-} */
 
 .clearfix::after {
   content: "";
